# qld-election-pref-explorer

./: .envrc  .gitignore  README.md  app.py  consts.py  electorate_pref_explorer.py  greens_pref_explorer.py  overall_pref_explorer.py  pyproject.toml  qld-election-pref-flows-app.py  utils.py
data/: electorates.json  qld_2024_distributions.parq  qld_2024_final_tally.parq  qld_2024_first_prefs.parq
